--- a/src/App.css
+++ b/src/App.css
@@ -18,21 +18,312 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  /* background: fixed;
+  background-size: cover;
+    background-image: url("https://scontent.flos2-1.fna.fbcdn.net/v/t39.30808-6/252236382_1942740535903787_6450025716565049001_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeGZ2C3YckyYU1A20B97lNc9kos5D4OaB_mSizkPg5oH-e1sQAMdNzIei4A-rvwwge1sIup48GQ3H6Klzn6NbCXD&_nc_ohc=Rz9JvHuc3AgAX8VVZJf&_nc_zt=23&_nc_ht=scontent.flos2-1.fna&oh=00_AT_pMLbs9_CqgNszjpMBowNvHS7ChiB897Q4LpmzaZ7hnQ&oe=6327B6F3"); */
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* phone css */
+
+.btn-link {
+  margin: 10px;
+  text-decoration: none;
+  color: #282c34;
+  border: grey 1px solid;
+  background-color: white;
+  border-radius: 5px;
+  padding: 3px;
+}
+
+nav {
+  padding: 9px 22%;
+  border-top: grey 0.5px solid;
+  position: fixed;
+  bottom: 0;
+  background-color: #282c34;
+  /* z-index: 5; */
+}
+
+.bio {
+  display: none;
+}
+
+#last-gallery {
+  margin-bottom: 30px;
+}
+
+iframe {
+  margin-bottom: 50px;
+  border-radius: 20px;
+}
+
+.logo {
+  font-style: italic;
+}
+
+.audiomack {
+  margin-bottom: 50px;
+  border-radius: 20px;
+}
+.home {
+  border-radius: 20px;
+  border: grey 1px solid;
+  max-width: 80%;
+  display: grid;
+  grid-template-columns: auto auto;
+  background: fixed;
+  padding-top: 30px;
+  padding-bottom: 20px;
+  margin-bottom: 14%;
+  background-color: #5d6575;
+  /* background-image: url("https://scontent.flos2-1.fna.fbcdn.net/v/t39.30808-6/252236382_1942740535903787_6450025716565049001_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeGZ2C3YckyYU1A20B97lNc9kos5D4OaB_mSizkPg5oH-e1sQAMdNzIei4A-rvwwge1sIup48GQ3H6Klzn6NbCXD&_nc_ohc=Rz9JvHuc3AgAX8VVZJf&_nc_zt=23&_nc_ht=scontent.flos2-1.fna&oh=00_AT_pMLbs9_CqgNszjpMBowNvHS7ChiB897Q4LpmzaZ7hnQ&oe=6327B6F3"); */
+}
+.videos,
+.audiomack,
+.wrapper,
+.gallery {
+  margin-top: 8%;
+}
+
+.stream {
+  display: grid;
+  grid-template-columns: auto auto;
+  margin-top: 8%;
+  margin-bottom: 9%;
+}
+
+.stream img {
+  height: 70%;
+  width: 80%;
+  border: wheat 1px solid;
+  border-radius: 10px;
+}
+
+.home img {
+  width: 35%;
+  height: 40%;
+  border: 1px wheat solid;
+  border-radius: 100%;
+}
+
+::placeholder {
+  font-size: small;
+}
+
+.my-header {
+  background-color: #282c34;
+}
+
+.menu {
+  left: 0;
+  top: 0;
+  position: fixed;
+  bottom: 7px;
+}
+
+summary {
+  background-color: #282c34;
+}
+
+/* Gallery */
+
+.images {
+  max-width: 90%;
+}
+
+.images img {
+  width: 10%;
+  height: 10%;
+}
+
+.images > img {
+  flex: 0 0 55%;
+  scroll-snap-align: start;
+}
+
+.images {
+  display: flex;
+  overflow: auto;
+  scroll-snap-type: mandatory;
+  padding: 24px;
+  gap: 12px;
+  scroll-padding: 24px;
+}
+
+/* .images img {
+  width: 90%;
+} */
+
+/* Logo Bounce */
+
+.bouncing-text {
+  position: fixed;
+  top: 0;
+  display: flex;
+  font-size: 70%;
+  font-family: arial black;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  background-color: #282c34;
+}
+
+.b,
+.o,
+.u,
+.n,
+.c,
+.e {
+  color: white;
+  text-shadow: 0 3px #001522, 0 5px 0 7px white;
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1, 1) translateY(0);
   }
-  to {
-    transform: rotate(360deg);
+  10% {
+    transform: scale(1.1, 0.9) translateY(0);
   }
+  30% {
+    transform: scale(0.9, 1.1) translateY(-55px);
+  }
+  50% {
+    transform: scale(1.05, 0.95) translateY(0);
+  }
+  58% {
+    transform: scale(1, 1) translateY(-7px);
+  }
+  65% {
+    transform: scale(1, 1) translateY(0);
+  }
+  100% {
+    transform: scale(1, 1) translateY(0);
+  }
+}
+
+.b {
+  animation: bounce 1s ease 3;
+}
+
+.o {
+  animation: bounce 1s ease 3 0.1s;
+}
+
+.u {
+  animation: bounce 1s ease 3 0.2s;
+}
+
+.n {
+  animation: bounce 1s ease 3 0.3s;
+}
+
+.c {
+  animation: bounce 1s ease 3 0.4s;
+}
+
+.e {
+  animation: bounce 1s ease 3 0.5s;
+}
+
+/* end of logo */
+
+/* comment */
+
+.create {
+  max-width: 80%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.create label {
+  margin-bottom: 30px;
+}
+
+.create input,
+.create textarea,
+.create select {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid grey;
+  box-sizing: border-box;
+  display: block;
+}
+
+.create button {
+  background-color: #001522;
+  color: wheat;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+h1 {
+  max-width: 40%;
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #61dafb;
+  color: #001522;
+  border: 2px grey solid;
+}
+
+.upload {
+  border-radius: 100%;
+  width: 10%;
+}
+
+.btn {
+  float: right;
+}
+
+.table {
+  color: white;
+  text-align: left;
+  margin-bottom: 120px;
+  background-color: #5d6575;
+  border-radius: 0 0 20px 20px;
+  border: none;
+}
+
+input {
+  margin-top: 5px;
+  color: #5d6575;
+}
+
+.wrapper {
+  margin-bottom: 50px;
+}
+
+.form-control1 {
+  border-radius: 4px;
+  margin-right: 2px;
+  border: none;
+}
+
+.form-control {
+  padding: 10% 0;
+}
+
+.form-container {
+  left: 0;
+  position: fixed;
+  bottom: 9%;
+  border: 1px wheat solid;
+  border-radius: 8px;
+  padding: 2%;
+  background-color: #282c34;
+  /* padding-right: 19%; */
+  margin-left: 10%;
 }
